--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -35,6 +35,17 @@ body {
     align-items: center;
 }
 
+.bg-banner {
+    /* position: absolute; */
+    height: 900px;
+    background-color: #E52828;
+    /* background-image: url("../img/viper-bg.png"); */
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    align-items: center;
+}
+
 .bg-blackx {
     background-color: #000000;
 }
@@ -179,4 +190,77 @@ a.weapon-name {
     transform: scale(1.1);
     background-color: #FF4655;
     /* background-image: linear-gradient(#FF4655, #ff3546); */
+}
+
+.triangle-down {
+    width: 0;
+    height: 0;
+    border-left: 8px solid transparent;
+    border-right: 8px solid transparent;
+    border-top: 15px solid red;
+}
+
+.triangle-up {
+    width: 0;
+    height: 0;
+    border-left: 8px solid transparent;
+    border-right: 8px solid transparent;
+    border-bottom: 15px solid rgb(0, 255, 0);
+}
+
+.text-lime {
+    color: lime;
+}
+
+.my-alert {
+    border: 1px solid;
+    background-color: #000000;
+    padding: 10px;
+    box-shadow: 5px 10px red;
+}
+
+.btn-close {
+    filter: invert(100%) sepia(100%) saturate(500%) hue-rotate(10deg) brightness(497%) contrast(500%);
+}
+
+.decoration-red {
+    color: #FF4655;
+}
+
+.decoration-red:hover {
+    color: #FFFFFF;
+}
+
+.zoom-article {
+    background-color: #000000;
+    transition-duration: 320ms, 1800ms;
+    transition-property: transform, background-color;
+}
+
+.zoom-article:hover {
+    border: 1px solid;
+    /* padding: 10px; */
+    box-shadow: 5px 3px #000000;
+    /* box-shadow: 0px 0px 150px #000000; */
+    z-index: 2;
+    /* -webkit-transition: all 280ms ease-in;
+    -webkit-transform: scale(1.3);
+    -ms-transition: all 280ms ease-in;
+    -ms-transform: scale(1.3);
+    -moz-transition: all 280ms ease-in;
+    -moz-transform: scale(1.3);
+    transition: all 280ms ease-in; */
+    transform: scale(1.1);
+    /* background-color: #FF4655; */
+    color: #FFFFFF;
+    /* background-image: linear-gradient(#FF4655, #ff3546); */
+}
+
+.my-radio {
+    display: none;
+
+}
+
+.desc {
+    display: none;
 }
